Temporarily remove Debug-check on stopping watching file descriptor.

This check was recently added but fires for some FileDescriptorWatcher
tests, so remove it until we understand the underlying issue.

Bug: 741788
Change-Id: Id1572166fcdb166c6be5700ea7e137b486ebaf5d