base/message_loop/message_pump_fuchsia.cc
@@ -4,7 +4,6 @@
 
 #include "base/message_loop/message_pump_fuchsia.h"
 
-#include <magenta/status.h>
 #include <magenta/syscalls.h>
 
 #include "base/logging.h"
@@ -17,8 +16,9 @@ MessagePumpFuchsia::FileDescriptorWatcher::FileDescriptorWatcher(
 }
 
 MessagePumpFuchsia::FileDescriptorWatcher::~FileDescriptorWatcher() {
-  if (!StopWatchingFileDescriptor())
-    NOTREACHED();
+  // TODO(wez): We should check that this call does not fail, but at present
+  // that breaks some FileDescriptorWatcher tests (crbug.com/741788).
+  StopWatchingFileDescriptor();
   if (io_)
     __mxio_release(io_);
   if (was_destroyed_) {
@@ -34,8 +34,7 @@ bool MessagePumpFuchsia::FileDescriptorWatcher::StopWatchingFileDescriptor() {
       static_cast<uint64_t>(reinterpret_cast<uintptr_t>(this));
   int result = mx_port_cancel(port_, handle_, this_as_key);
   DLOG_IF(ERROR, result != MX_OK)
-      << "mx_port_cancel(handle=" << handle_
-      << ") failed: " << mx_status_get_string(result);
+      << "mx_port_cancel(handle=" << handle_ << ") failed: result=" << result;
   handle_ = MX_HANDLE_INVALID;
   return result == MX_OK;
 }
@@ -49,7 +48,7 @@ MessagePumpFuchsia::MessagePumpFuchsia() : keep_running_(true) {
 MessagePumpFuchsia::~MessagePumpFuchsia() {
   mx_status_t status = mx_handle_close(port_);
   if (status != MX_OK) {
-    DLOG(ERROR) << "mx_handle_close failed: " << mx_status_get_string(status);
+    DLOG(ERROR) << "mx_handle_close failed: " << status;
   }
 }
 
@@ -64,7 +63,9 @@ bool MessagePumpFuchsia::WatchFileDescriptor(int fd,
   controller->watcher_ = delegate;
   controller->port_ = port_;
 
-  uint32_t events = 0;
+  DCHECK(mode == WATCH_READ || mode == WATCH_WRITE || mode == WATCH_READ_WRITE);
+
+  uint32_t events;
   switch (mode) {
     case WATCH_READ:
       events = MXIO_EVT_READABLE;
@@ -76,7 +77,7 @@ bool MessagePumpFuchsia::WatchFileDescriptor(int fd,
       events = MXIO_EVT_READABLE | MXIO_EVT_WRITABLE;
       break;
     default:
-      NOTREACHED() << "unexpected mode: " << mode;
+      DLOG(ERROR) << "unexpected mode: " << mode;
       return false;
   }
 
@@ -107,8 +108,8 @@ bool MessagePumpFuchsia::FileDescriptorWatcher::WaitBegin() {
   mx_status_t status = mx_object_wait_async(handle_, port_, this_as_key,
                                             signals, MX_WAIT_ASYNC_ONCE);
   if (status != MX_OK) {
-    DLOG(ERROR) << "mx_object_wait_async failed: "
-                << mx_status_get_string(status) << " (port=" << port_ << ")";
+    DLOG(ERROR) << "mx_object_wait_async failed: " << status
+                << " (port=" << port_ << ")";
     return false;
   }
   return true;
@@ -155,19 +156,18 @@ void MessagePumpFuchsia::Run(Delegate* delegate) {
     mx_port_packet_t packet;
     const mx_status_t wait_status = mx_port_wait(port_, deadline, &packet, 0);
     if (wait_status != MX_OK && wait_status != MX_ERR_TIMED_OUT) {
-      NOTREACHED() << "unexpected wait status: "
-                   << mx_status_get_string(wait_status);
+      NOTREACHED() << "unexpected wait status: " << wait_status;
       continue;
     }
 
     if (packet.type == MX_PKT_TYPE_SIGNAL_ONE) {
       // A watched fd caused the wakeup via mx_object_wait_async().
-      DCHECK_EQ(MX_OK, packet.status);
+      DCHECK(packet.status == MX_OK);
       FileDescriptorWatcher* controller =
           reinterpret_cast<FileDescriptorWatcher*>(
               static_cast<uintptr_t>(packet.key));
 
-      DCHECK_NE(0u, packet.signal.trigger & packet.signal.observed);
+      DCHECK(packet.signal.trigger & packet.signal.observed);
 
       uint32_t events = controller->WaitEnd(packet.signal.observed);
 
@@ -190,7 +190,7 @@ void MessagePumpFuchsia::Run(Delegate* delegate) {
       }
     } else {
       // Wakeup caused by ScheduleWork().
-      DCHECK_EQ(MX_PKT_TYPE_USER, packet.type);
+      DCHECK(packet.type == MX_PKT_TYPE_USER);
     }
   }
 
